adds a test in the sample
* sample/index.html: Adds a box having the `margin-left` &
  `margin-right` properties set to `auto`.
* sample/text.json: Adds a test that checks for the `marginLeft`
  property.

--- a/sample/index.html
+++ b/sample/index.html
@@ -70,8 +70,18 @@
       left: calc(100% - 8px);
       /*bottom: 0;*/
     }
+    .center-box-container {
+      background-color: #fcf;
+      width: 300px;
+    }
+    .center {
+      width: 100px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
     .output {
-      background: #ddd;
+      background: #ddd !important;
       border: 1px solid black;
       height: 5em;
       overflow-y: scroll;
@@ -97,6 +107,9 @@
   <div class="box box8">h</div>
   <div class="box box9">i</div>
   <div class="box box10">j</div>
+  <div class="center-box-container">
+    <div class="box box11 center">center</div>
+  </div>
   <p>Hello, I’m a <code>p</code> tag.</p>
   <div class="flex-container">
     <div class="flex flex1"></div>
