--- a/sample/index.html
+++ b/sample/index.html
@@ -73,6 +73,7 @@
     .center-box-container {
       background-color: #fcf;
       width: 300px;
+      height: 50px;
     }
     .center {
       width: 100px;
