--- a/sample/index.html
+++ b/sample/index.html
@@ -116,8 +116,8 @@
     <div class="flex flex1"></div>
     <div class="flex flex2"></div>
     <div class="flex flex3"></div>
-    <div class="flex flex4"></div>
-    <div class="flex flex5"></div>
+    <div class="flex flex4">This box is not the last child</div>
+    <div class="flex flex5">Last child of this container</div>
   </div>
   <div class="box output">INIT</div>
   <script>
